test/libsolidity/syntaxTests/revertStatement/revert_event.sol
contract C {
    event E();
    function f() public pure {
        revert E();
    }
}
// ----
// TypeError 1885: (74-75): Expression has to be an error.
